--- a/css/girasol.css
+++ b/css/girasol.css
@@ -66,7 +66,7 @@ html, body {
 }
 
 .carta span {
-    font-size: 1vw; /* Ajusta el tamaño según sea necesario */
+    font-size: medium; /* Ajusta el tamaño según sea necesario */
     color: white;
     font-weight: 900;
     display: inline-block; /* Para que funcione la animación */
